[package]
name = "pokervis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
rand = "^0.8.5"
itertools = "^0.10"
renet = "^0.0.16"